--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 Repository of sys_config files for different sunxi boards
-Banana Pi sys_config files is powered by lemaker.org
+Banana Pi sys_config files is powered by <http://lemaker.org>
